Revert "fix: choose z-index problem"
This reverts commit 7c2d32f5e14b6a95ed13e2190f9ec6cc3dd5dfc6.

--- a/packages/webgal/src/Core/gameScripts/performStyles/choose.module.scss
+++ b/packages/webgal/src/Core/gameScripts/performStyles/choose.module.scss
@@ -7,7 +7,6 @@
   justify-content: center;
   align-items: center;
   z-index: 13;
-  transform: translateZ(13px);
   background: rgba(0, 0, 0, 0.05);
 }
 
